--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,12 @@ background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: 100% 100% ;
 }
+
+@media screen and (max-width:700px) {
+  .secThreeTextParas,.popup{
+      width: 100vw !important;
+  }
+  .secThreeTextParas{
+    margin: 10px 10px !important;
+  }
+}
